.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Site__c/fields/Generic_Site__c.field-meta.xml
<CustomField>
    <fullName>Generic_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generic Site</label>
    <type>Checkbox</type>
</CustomField>