.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Site__c/fields/Invoice_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Invoice_to_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the &apos;Invoice Group By&apos; on the related Account is &apos;Site&apos;, Invoices will be addressed to this Account.</description>
    <inlineHelpText>If the &apos;Invoice Group By&apos; on the related Account is &apos;Site&apos;, Invoices will be addressed to this Account.</inlineHelpText>
    <label>Invoice to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sites (Invoice to Account)</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>