.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Site__c/fields/Invoice_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invoice_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the &apos;Invoice Group By&apos; on the related Account is &apos;Site&apos;, Invoices will be addressed to this Contact.</description>
    <inlineHelpText>If the &apos;Invoice Group By&apos; on the related Account is &apos;Site&apos;, Invoices will be addressed to this Contact.</inlineHelpText>
    <label>Invoice to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sites (Invoice to Contact)</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>