.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Site__c/fields/Site_s_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Site_s_Timezone__c</fullName>
    <description>This field is created for the User to select any of the Australian Timezone so that the same can update the BH Timezone field.</description>
    <label>Site&apos;s Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Australia_Timezones</valueSetName>
    </valueSet>
</CustomField>