.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Site__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PI_Australian_States</valueSetName>
    </valueSet>
</CustomField>