.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Site__c/fields/Timesheet_Approver__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to Approve Shifts in the Connect App.</description>
    <label>Timesheet Approver</label>
    <referenceTo>Timesheet_Approver__c</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>