.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Site__c/fields/VMS_Default_Site__c.field-meta.xml
<CustomField>
    <fullName>VMS_Default_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default Site for VMS</description>
    <label>VMS Default Site</label>
    <type>Checkbox</type>
</CustomField>