.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Site__c/fields/WFM_Branch__c.field-meta.xml
<CustomField>
    <fullName>WFM_Branch__c</fullName>
    <label>WFM Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alliance Extra Staff</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing – Adelaide</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing – Albury</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing – Brisbane</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing - Corporate Health (National)</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing – Geelong</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing - Gold Coast</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing – Melbourne</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing – Perth</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing - Sunshine Coast</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing – Sydney</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing – Townsville</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing - Western Sydney</fullName>
            </value>
            <value>
                <fullName>Alliance Rural &amp; Remote Health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>