.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Site__c/listViews/All_Site_LO.listView-meta.xml
<ListView>
    <fullName>All_Site_LO</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>WFM_Branch__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>notContain</operation>
        <value>1218</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>notContain</operation>
        <value>admin</value>
    </filters>
    <label>All Site_WFM</label>
</ListView>