.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Site__c/listViews/Site_GeoFix.listView-meta.xml
<ListView>
    <fullName>Site_GeoFix</fullName>
    <columns>NAME</columns>
    <columns>sirenum__Street_Address__c</columns>
    <columns>sirenum__City__c</columns>
    <columns>sirenum__Postal_Code__c</columns>
    <columns>sirenum__Operating_Company__c</columns>
    <columns>sirenum__Coordinates__Latitude__s</columns>
    <columns>sirenum__Coordinates__Longitude__s</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>sirenum__Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>sirenum__Coordinates__Latitude__s</field>
        <operation>equals</operation>
    </filters>
    <label>Site GeoFix</label>
</ListView>